Update Base.java